# almoxarifado_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
alembic/versions/: README.md
application/services/: estoque_service.py
core/entities/: alerta.py  almoxarifado.py  categoria.py  cliente.py  devolucao.py  entrada.py  estoque.py  forma_pagto.py  fornecedor.py  kit.py  kit_montado.py  log_alteracoes.py  marca.py  modelo.py  ordem_servico.py  ordem_servico_produto.py  repositories.py  saida.py
core/use_cases/: cadastrar_produto.py
docs/: README.md
infrastructure/db/: models.py  repositories.py  session.py
infrastructure/db/models/: __init__.py  alerta.py  almoxarifado.py  categoria.py  cliente.py  devolucao.py  entrada.py  estoque.py  kit.py  kit_montado.py  marca.py
infrastructure/db/repositories/: __init__.py  alerta_repositoriy.py  almoxarifado_repository.py  categoria_repository.py  cliente_repository.py  devolucao_repository.py  entrada_repository.py  estoque_repository.py  kit_montado_repository.py  kit_repository.py  marca_repository.py
interfaces/api/: main.py
interfaces/api/routers/: almoxarifado.py  categoria.py  cliente.py  devolucao.py  entrada.py  estoque.py  forma_pagto.py  fornecedor.py  kit.py  marca.py  modelo.py  ordem_servico.py  ordem_servico_produto.py  saida.py
scripts/: create_db_and_tables.py  load_all_fake_data.py  load_fake_clientes.py  load_fake_data.py
